--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.0.0",
+    "date-fns": "^4.1.0",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.516.0",
     "moment": "^2.30.1",
@@ -33,6 +35,7 @@
     "next-themes": "^0.4.6",
     "path-to-regexp": "^8.2.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.11.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
     "react-query": "^3.39.3",
