--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.2.5
 Flask-SQLAlchemy==3.0.3
 Flask-Migrate==4.0.4
 Flask-JWT-Extended==4.4.4
+Flask-CORS==4.0.0
 psycopg2-binary==2.9.7
 pandas==2.2.3
 scikit-learn==1.3.2
