--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
     "react-query": "^3.39.3",
+    "recharts": "2.15.4",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1",
